packages/components/src/components/card/card.scss
@use "@infineon/design-system-tokens/dist/tokens";

* { 
  box-sizing: border-box;
}

:host {
  display: inline-flex;
}

:host(:not(.full-width)) {
  --card-links-padding: 0px 24px 24px 24px;
}

:host(.full-width) {
  width: 100%;
  & ::slotted(ifx-card-links) {
    --card-links-padding: 0px;
    --card-links-padding-top: 16px;
  }

  & ::slotted(ifx-card-headline) { 
    --card-headline-padding: 0px;
    --card-headline-font: 18px;
    --card-headline-line-height: 26px;
  }

  .card {
    width: 100%;
    border-width: 1px;
    &.horizontal {
      & .horizontal {
        min-height: auto;
        width: 100%;
        height: auto;
        justify-content: space-between; 

        & .card-img {
          //flex: 0 0 320px;

          flex: 0 0 auto; //new
          aspect-ratio: 2 / 1; //new
          min-width: 0; //new
          max-width: 50%; //new

          position: relative;
          align-self: stretch; 

          & ::slotted([slot=img]) {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            object-fit: cover;
          }
        }

        & .lower__body-wrapper {
          flex: 1; 
          padding: 16px;

          & .upper-body { 
            padding: 0px;
          }
        }
      }
    }
  }
}

.card {
  position: relative;
  display: inline-flex;
  flex-direction: column;
  word-wrap: break-word;
  background-color: tokens.$ifxColorBaseWhite;
  background-clip: border-box;
  border: 2px solid tokens.$ifxColorEngineering200;
  border-radius: 2px;

  width: 350px;
  height: auto;
  font-family: var(--ifx-font-family); // tokens.$ifxFontFamilyBody;



  // when the link is focused or hovered, the border color changes
  &:has(.card-href:focus), &:has(.card-href:hover) {
    outline: none;
    border-color: tokens.$ifxColorOcean500;

    ::slotted(ifx-card-headline) {
      color: tokens.$ifxColorOcean500;
    }
  }

  &.noBtns {
    & .vertical {
      & .lower__body-wrapper {
        padding-bottom: 24px;
      }
    }

    & .horizontal {
      & .lower__body-wrapper {
        padding-bottom: 24px;
      }
    }
  }

  & .horizontal {
    display: flex;
    flex-direction: row;
    min-height: 218px;
    width: 100%;
    
    & .card-img {
      flex: 1;
      text-decoration: none;

      &.noImage {
        display: none;
      }

      & ::slotted([slot=img]) {
        width: 100%;
        height: 100%;
        object-fit: cover;
        }
    }

    & .lower__body-wrapper {
      flex: 1;
      display: grid;
      grid-template-rows: 1fr auto;

      & .upper-body {
        display: flex;
        flex-direction: column;
        text-decoration: none;
        color: tokens.$ifxColorBaseBlack;
        padding: 24px 24px 0px 24px;
      }
    }
  }

  & .vertical {
    & .upper__body-wrapper {
      text-decoration: none;
      color: tokens.$ifxColorBaseBlack;

      & .card-img {
        height: 190px;

        &.noImage {
          display: none;
        }
      }

      & .upper-body {
        padding: 24px 24px 0px 24px;
      }
    }

    & .lower__body-wrapper {
      &:hover {
        border-color: tokens.$ifxColorEngineering200;
      }
    }
  }

  &.horizontal {
    flex-direction: row;
    width: 538px;

    & .card-img {
      flex: 1;
      order: 2;

      & ::slotted([slot=img]) {
        width: 100%;
        height: 100%;
        vertical-align: bottom;
        object-fit: cover;
      }
    }

    &.left {
      & .horizontal {
        & .card-img {
          order: 1;
        }

        & .lower__body-wrapper {
          order: 2;
        }
      }
    }
  }

  & .card-href:focus {
    outline: none;
  }
}

